[package]
name = "advent-of-rust-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "days"
path = "src/lib/days/mod.rs"

[dependencies]
itertools = "0.10.3"
nom = "7.1.0"
nalgebra = "0.29.0"
petgraph = "0.6.0"